<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:android="http://schemas.android.com/apk/res/android"
	app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
	android:orientation="vertical"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:paddingLeft="24dp"
	android:paddingTop="24dp"
	android:paddingBottom="24dp"
	android:paddingRight="24dp">

	<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">
		<LinearLayout android:layout_width="match_parent"
		              android:layout_height="wrap_content"
		              android:orientation="vertical">

			<TextView
				android:text="@string/confirm_dialog"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				app:autoSizeTextType="uniform"
				app:autoSizeMinTextSize="24sp"
				app:autoSizeMaxTextSize="40sp"
				app:autoSizeStepGranularity="2sp"
				android:padding="5dp"
				/>

			<View
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:background="#c0c0c0"/>

			<TextView
					android:text="@string/confirm_price"
					android:id="@+id/confirm_price_subtotal"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					app:autoSizeTextType="uniform"
					app:autoSizeMinTextSize="18sp"
					app:autoSizeMaxTextSize="40sp"
					app:autoSizeStepGranularity="2sp"
					android:padding="5dp"
			/>

			<TextView
					android:text="@string/confirm_tax"
					android:id="@+id/confirm_price_tax"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					app:autoSizeTextType="uniform"
					app:autoSizeMinTextSize="18sp"
					app:autoSizeMaxTextSize="40sp"
					app:autoSizeStepGranularity="2sp"
					android:padding="5dp"
			/>

			<View
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:background="#c0c0c0"/>

			<TextView
					android:text="@string/confirm_total_without_shipping"
					android:id="@+id/confirm_price_without_shippping"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					app:autoSizeTextType="uniform"
					app:autoSizeMinTextSize="18sp"
					app:autoSizeMaxTextSize="40sp"
					app:autoSizeStepGranularity="2sp"
					android:padding="5dp"
			/>

			<View
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:background="#c0c0c0"/>

			<TextView
					android:text="@string/confirm_shipping_rates"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:textStyle="bold"
					app:autoSizeTextType="uniform"
					app:autoSizeMinTextSize="18sp"
					app:autoSizeMaxTextSize="40sp"
					app:autoSizeStepGranularity="2sp"
					android:padding="5dp"
			/>

			<ListView
					android:id="@+id/shipping_list_view"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintEnd_toEndOf="parent"
					app:layout_constraintStart_toStartOf="parent"
					app:layout_constraintTop_toTopOf="parent" />


			<View
				android:layout_width="match_parent"
				android:layout_height="2dp"
				android:background="#c0c0c0"/>

			<TextView
				android:text="@string/confirm_total_with_shipping"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:textStyle="bold"
				app:autoSizeTextType="uniform"
				app:autoSizeMinTextSize="18sp"
				app:autoSizeMaxTextSize="40sp"
				app:autoSizeStepGranularity="2sp"
				android:padding="5dp"
			/>

			<com.google.android.material.button.MaterialButton
				android:id="@+id/shipping_submit_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/confirm_button"/>
		</LinearLayout>
	</ScrollView>

</LinearLayout>